# MasterTesis

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
Experiments/: experiment-plan.md
Experiments/01-subcritical-bump-1d/: REPORT-ABLATION.md  REPORT.md  REPORT_template.md  equation_form_comparison.py  experiment1-detail.md  finalize_report.py  generate_and_plot.py  ground_truth.py  (+3 more)
Paper/: main.tex  references.bib
Report/: .latexmkrc  Makefile  main.tex
Slides/: package-lock.json  slides.md
docs/: DOCKER.md
scripts/: analyze_v2_sweep.py  build_dataset.py  plot_training.py  preview_cases.py  preview_cases_2d.py  preview_generator.py  regenerate_datasets.sh  run_all.sh  run_local_tonight.sh  sweep_operator.py  train_operator.py  validate_swe1d.py  visualize_cases.py
studies/: __init__.py  _runner.py  ablation_forms.py  aggregate.py  arch_scaling.py  exp1_sensitivity.py  exp2_n_t_sweep.py  exp5_n_t_sweep.py  exp6_run_matrix.py
tests/: test_aggregate.py  test_architectures.py  test_blocks.py  test_checkpoint.py  test_config.py  test_data.py  test_data_loaders.py  test_datagen_2d.py  test_diagnostics.py  test_exp1_manning_equivalence.py  test_exp3_solver.py  test_inflow_bc.py  test_legacy_dedup.py  test_loss_components.py  test_losses_bc.py  test_m10_h_floor_fix.py  test_m1_additions.py  test_m7_fixes.py  test_m8_fixes.py  test_m9_fixes.py  test_metrics.py  test_operator.py  test_operator_2d.py  test_registry.py  test_residuals.py  test_seed.py  test_studies.py  test_tracking.py  test_trainer.py
(+123 files in other folders)
