[project]
name = "pinn-bath"
version = "0.1.0"
description = "Physics-informed neural networks for inverse bathymetry from shallow-water observations."
readme = "README.md"
requires-python = ">=3.13,<3.14"
authors = [{ name = "Etienne Calderon", email = "etienne.rojas@usm.cl" }]
license = { text = "MIT" }

dependencies = [
  "torch==2.6.0",
  "numpy==2.4.4",
  "matplotlib==3.10.8",
  "scipy>=1.13,<2",
  "pyyaml>=6.0,<7",
  "pydantic>=2.0,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.5",
  "pyright>=1.1",
  "hypothesis>=6,<7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pinn_bath"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = [
  "E501",  # line length is enforced by formatter
]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "basic"
reportMissingImports = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "fast: quick tests that run in pre-commit",
  "slow: tests that exercise full training loops",
  "gpu: tests that require a CUDA device",
]
addopts = "-ra -q --strict-markers"
